--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
           </div>
 
-          <div class="collapse fade show active my-4" id="collapseExample">
+          <div class="collapse fade my-4" id="collapseExample">
           <ul class="nav nav-tabs" id="myTab">
             <li class="nav-item">
               <a class="nav-link active" data-toggle="tab" href="#team">Team</a>
